--- a/SWWebView/SWWebView.xcodeproj/xcshareddata/xcschemes/SWWebView.xcscheme
+++ b/SWWebView/SWWebView.xcodeproj/xcshareddata/xcschemes/SWWebView.xcscheme
@@ -50,6 +50,19 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
+      <BuildableProductRunnable>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "8A5D98231F3E0D77002E521F"
+            BuildableName = "SWWebView-JSTestSuite.app"
+            BlueprintName = "SWWebView-JSTestSuite"
+            ReferencedContainer = "container:SWWebView.xcodeproj">
+         </BuildableReference>
+      </BuildableProductRunnable>
+      <LocationScenarioReference
+         identifier = "com.apple.dt.IDEFoundation.CurrentLocationScenarioIdentifier"
+         referenceType = "1">
+      </LocationScenarioReference>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
