--- a/SWWebView/js-src/tsconfig.json
+++ b/SWWebView/js-src/tsconfig.json
@@ -1,8 +1,11 @@
 {
-    "compilerOptions": {
-        "target": "es5",
-        "strictNullChecks": true,
-        "lib": ["dom", "es6"],
-        "moduleResolution": "node"
-    }
+  "compilerOptions": {
+    "target": "es5",
+    "strictNullChecks": true,
+    "lib": [
+      "dom",
+      "es6"
+    ],
+    "moduleResolution": "node"
+  }
 }
